[gd_scene load_steps=2 format=3 uid="uid://dokpuags3k7nh"]

[ext_resource type="Script" uid="uid://cqtqx7hb57hss" path="res://main.gd" id="1_glv2v"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.325049, 0.252212, 0.324162, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartServerButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Server"

[node name="JoinServerButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Server"

[node name="SendMessageButton" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Send Message"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "MSG:"

[node name="MSGBox" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Write Message Here"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Log" type="CodeEdit" parent="CenterContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 512)
layout_mode = 2
placeholder_text = "Waiting..."
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
wrap_mode = 1
scroll_smooth = true
gutters_draw_line_numbers = true

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Server IP:"

[node name="ServerIPBox" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Server Port:"

[node name="ServerPortBox" type="LineEdit" parent="CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "5550"
placeholder_text = "Write Message Here"
